--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <br/>
             <div id="body-hosting" class="df jc-sb">
-                <section class="df fd-c bloc body-hosting">
+                <section id="body-hosting-marseille" class="df fd-c bloc body-hosting">
                     <span class="bold" >Hébergements à Marseille<br/>
                     <div class="df">
                         <div>
@@ -133,52 +133,51 @@
                         <span class="bold show-more">Afficher Plus</span>
                     </p>
                 </section>
-                <section id="" class="bloc df fd-c body-hosting">
+                <section id="body-hosting-popular" class="bloc df fd-c body-hosting">
                     <div class="df jc-sb">
                         <span class="bold">Les plus populaires</span>
                         <span><i class="fas fa-chart-line"></i></span>
                     </div>
                     <div>
-                        <div class="popular-thumbnail">
-                            <div class="df fd-r">
-                                <div>
-                                    <a target="_blank" href="Ressources/hebergements/soleil-matin.jpg">
-                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/soleil-matin.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />
-                                    </a>
-                                </div>
-                                <div class="popular-thumbnail-text">
-                                    <span class="bold">Hôtel Le soleil du matin</span>
-                                    <div class="thin">Nuit à partir de 128€</div>
-                                    <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
-                                </div>
+                        <div class="popular-thumbnail df">
+                            <div>
+                                <a target="_blank" href="Ressources/hebergements/soleil-matin.jpg">
+                                    <img class="popular-thumbnail-photo" src="./Ressources/hebergements/soleil-matin.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />
+                                </a>
+                            </div>
+                            <div class="popular-thumbnail-text">
+                                <span class="bold">Hôtel Le soleil du matin</span>
+                                <div class="thin">Nuit à partir de 128€</div>
+                                <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                             </div>
                         </div>
-                        <div class="popular-thumbnail">
-                            <div class="df fd-r">
-                                <div>
-                                    <a target="_blank" href="Ressources/hebergements/coeur-eau.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/hebergements/coeur-eau.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>   
-                                </div>
-                                <div class="popular-thumbnail-text">
-                                    <span class="bold">Au coeur de l'eau Chambres d'hôtes</span>
-                                    <div class="thin">Nuit à partir de 71€</div>
-                                    <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
-                                </div>
+                        <div class="popular-thumbnail df">
+                            <div>
+                                <a target="_blank" href="Ressources/hebergements/coeur-eau.jpg">
+                                    <img class="popular-thumbnail-photo" src="./Ressources/hebergements/coeur-eau.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" />
+                                </a>   
+                            </div>        
+                            <div class="popular-thumbnail-text">
+                                <span class="bold">Au coeur de l'eau Chambres d'hôtes</span>
+                                <div class="thin">Nuit à partir de 71€</div>
+                                <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                             </div>
-                        </div>        
+                        </div>
 
-                        <div class="popular-thumbnail">
-                            <div class="df fd-r">
-                                <div>
-                                    <a target="_blank" href="Ressources/hebergements/bleu-blanc.jpg">
-                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/bleu-blanc.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
-                                </div>
-                                <div class="popular-thumbnail-text">
-                                    <span class="bold">Hôtel Tout bleu et Blanc</span>
-                                    <div class="thin">Nuit à partir de 68€</div>
-                                    <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
-                                </div>
+                        <div class="popular-thumbnail df">
+                            <div>
+                                <a target="_blank" href="Ressources/hebergements/bleu-blanc.jpg">
+                                    <img class="popular-thumbnail-photo" src="./Ressources/hebergements/bleu-blanc.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" />
+                                </a> 
+                            </div>         
+                            <div class="popular-thumbnail-text">
+                                <span class="bold">Hôtel Tout bleu et Blanc</span>
+                                <div class="thin">Nuit à partir de 68€</div>
+                                <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                             </div>
                         </div>
+
+
                     </div>
                 </section>
             </div>
